[gd_scene load_steps=5 format=3 uid="uid://inmklbs8atec"]

[ext_resource type="Script" path="res://CharacterUP.gd" id="1_p3kfl"]
[ext_resource type="Texture2D" uid="uid://yfvxuaoysj6s" path="res://uzaygemisi/kanatlar/kanat lvl1.png" id="2_l72di"]
[ext_resource type="Texture2D" uid="uid://q6u6hc5tqu4t" path="res://uzaygemisi/go╠êvdeler/go╠êvde lvl1.png" id="3_barr6"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f4uun"]
radius = 44.0
height = 94.0

[node name="Character" type="CharacterBody2D"]
position = Vector2(337, 8)
script = ExtResource("1_p3kfl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(500, 0)
shape = SubResource("CapsuleShape2D_f4uun")

[node name="wing" type="Sprite2D" parent="."]
position = Vector2(500, 0)
texture = ExtResource("2_l72di")

[node name="body" type="Sprite2D" parent="."]
position = Vector2(500, 0)
scale = Vector2(1.037, 1)
texture = ExtResource("3_barr6")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Upgrade" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -17.0
offset_top = -22.0
offset_right = 23.0
offset_bottom = 18.0

[node name="NewLevel" type="Panel" parent="Upgrade"]
process_mode = 2
visible = false
layout_mode = 0
offset_left = -250.0
offset_top = -100.0
offset_right = 250.0
offset_bottom = 100.0

[node name="health" type="Button" parent="Upgrade/NewLevel"]
layout_mode = 0
offset_left = 125.0
offset_right = 250.0
offset_bottom = 200.0
text = "health"

[node name="speed" type="Button" parent="Upgrade/NewLevel"]
layout_mode = 0
offset_right = 125.0
offset_bottom = 200.0
text = "speed"

[node name="fuel" type="Button" parent="Upgrade/NewLevel"]
layout_mode = 0
offset_left = 250.0
offset_right = 375.0
offset_bottom = 200.0
text = "fuel"

[node name="damage" type="Button" parent="Upgrade/NewLevel"]
layout_mode = 0
offset_left = 375.0
offset_right = 500.0
offset_bottom = 200.0
text = "damage"

[node name="get_level" type="Button" parent="."]
offset_left = -500.0
offset_top = -300.0
offset_right = -350.0
offset_bottom = -150.0
text = "get level"

[connection signal="pressed" from="Upgrade/NewLevel/health" to="." method="_on_health_pressed"]
[connection signal="pressed" from="Upgrade/NewLevel/speed" to="." method="_on_speed_pressed"]
[connection signal="pressed" from="Upgrade/NewLevel/fuel" to="." method="_on_fuel_pressed"]
[connection signal="pressed" from="Upgrade/NewLevel/damage" to="." method="_on_damage_pressed"]
[connection signal="pressed" from="get_level" to="." method="_on_get_level_pressed"]
